# shadow

./: .gitignore  .gitscopes  .roadmap  CHANGELOG.md  Cargo.toml  DEFAULT_CONFIG.toml  README.md  config.toml  prek.toml  roadmap  rustfmt.toml
shadow-continuity/: Cargo.toml
shadow-continuity/src/: lib.rs
shadow-continuity/src/mind/: extraction.rs  mind.rs  mind_model.rs  mod.rs
shadow-core/: Cargo.toml
shadow-core/src/: ask.rs  commands.rs  config.rs  engine.rs  handlers.rs  identity.rs  ingest.rs  json_tree.rs  lib.rs  llm.rs  locus.rs  model.rs  ollama.rs  setup.rs  utils.rs
shadow-core/src/db/: db_conn.rs  db_models.rs  mod.rs
shadow-core/src/locus/: core.rs  locus.rs  mind_op.rs  mod.rs
shadow-core/src/mind/: mind.rs  mind_model.rs  mod.rs
shadow-identity/: Cargo.toml
shadow-identity/src/: backup.rs  cert.rs  enclave.rs  keys.rs  keystore.rs  lib.rs  vault.rs
shadow-services/: Cargo.toml
shadow-services/src/: ingest.rs  lib.rs  models.rs  spotify.rs
shadow-tools/: Cargo.toml
shadow-tools/src/: fetch.rs  lib.rs  protocol.rs  registry.rs  search.rs  util.rs  weather.rs
shadow-tui/: Cargo.toml
shadow-tui/src/: main.rs
shadow-tui/src/tui/: app.rs  bottom_pane_widget.rs  chat_widget.rs  color.rs  input_widget.rs  json_inspector.rs  logo.rs  markdown_parse.rs  mod.rs  shadow_render.rs  status_widget.rs  tui_models.rs  utils.rs
shadow-tui/src/tui/app/: channels.rs  mod.rs  state.rs
shadow-tui/src/tui/app/handlers/: history.rs  logs.rs  mod.rs  mouse.rs  normal.rs  slash.rs
shadow-utils/: Cargo.toml
shadow-utils/src/: color.rs  lib.rs  utils.rs
src/: ask.rs  db.rs  handlers.rs  ingest.rs  main.rs  models.rs  ollama.rs
src/db/: db_conn.rs
src/tui/: app.rs  bottom_pane_widget.rs  chat_widget.rs  color.rs  input.rs  logo.rs  markdown_parse.rs  mod.rs  shadow_render.rs  status_widget.rs  tui_models.rs
