[package]
name = "shadow"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
clap = { version = "4.5.60", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = {version = "0.4", features = ["serde"]}

serde_json = {version = "1.0"}
dirs = "6.0.0"
