[package]
name = "shadow"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
clap = { version = "4.5.60", features = ["derive"] }
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = {version = "0.4", features = ["serde"]}
tokio = { version = "1", features = ["full"] }
ollama-rs = { version = "0.3.4", features = ["stream"] }
ratatui = { version = "0.30.0"}

serde_json = {version = "1.0"}
dirs = "6.0.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-stream = "0.1.18"
termimad = "0.34.1"
anyhow = "1"
color-eyre = "0.6.5"
crossterm = "0.29.0"
ratatui-textarea= "*"
pulldown-cmark = "0.13.1"
tui-markdown = "0.3.7"
hex_color = "3"