[package]
name = "shadow-continuity"
version = "0.1.0"
edition = "2024"

[dependencies]
json5 = "1.3.0"
serde = { version = "1.0", features = ["derive"]}
chrono = {version = "0.4", features = ["serde"]}
serde_json = {version = "1.0"}

color-eyre = "0.6.5"
shadow-utils = { path = "../shadow-utils" }
shadow-services = { path = "../shadow-services" }
