[package]
name = "shadow-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = {version = "0.4", features = ["serde"]}
tokio = { version = "1", features = ["full"] }
ollama-rs = { version = "0.3.4", features = ["stream"] }
clap = { version = "4.5.60", features = ["derive"] }
mistralrs = { version = "0.7.0", features = ["metal"] }


serde_json = {version = "1.0"}
dirs = "6.0.0"
tracing = "0.1"
tracing-subscriber = "0.3"
tokio-stream = "0.1.18"
anyhow = "1"
color-eyre = "0.6.5"
termimad = "0.34.1"
async-stream = "0.3"
json5 = "1.3.0"
futures = "0.3.32"
