[package]
name = "shadow-core"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"]}
rusqlite = { version = "0.31", features = ["bundled"] }
chrono = {version = "0.4", features = ["serde"]}
tokio = { version = "1", features = ["full"] }
clap = { version = "4.5.60", features = ["derive"] }

serde_json = {version = "1.0"}
dirs = "6.0.0"
tracing = "0.1"
tokio-stream = "0.1.18"
color-eyre = "0.6.5"
async-stream = "0.3"
json5 = "1.3.0"
futures = "0.3.32"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "stream"] }

shadow-tools = { path = "../shadow-tools" }
shadow-services = { path = "../shadow-services" }
shadow-continuity = { path = "../shadow-continuity" }
shadow-identity = { path = "../shadow-identity" }
shadow-utils = { path = "../shadow-utils" }
zeroize = "1"
