[package]
name = "shadow-identity"
version = "0.1.0"
edition = "2024"

[dependencies]
ed25519-dalek = { version = "2", features = ["rand_core", "zeroize"] }
rand_core = { version = "0.6", features = ["getrandom"] }
zeroize = "1"
chacha20poly1305 = "0.10"
argon2 = "0.5"
serde = { version = "1.0", features = ["derive"] }
color-eyre = "0.6.5"

# P0.4: Touch ID / Secure Enclave keystore (macOS only).
[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
security-framework-sys = { version = "2", features = ["OSX_10_15"] }
core-foundation = "0.10"
core-foundation-sys = "0.8"
