[package]
name = "shadow-services"
version = "0.1.0"
edition = "2024"

[dependencies]
serde_json = {version = "1.0"}
dirs = "6.0.0"
serde = { version = "1.0", features = ["derive"]}
color-eyre = "0.6.5"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
