[package]
name = "shadow-tools"
version = "0.1.0"
edition = "2024"

[dependencies]
chromiumoxide = "0.9.1"
color-eyre = "0.6.5"
futures = "0.3.32"
reqwest = { version = "0.12", features = ["json"] }
scraper = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["rt"] }
