[package]
name = "shadow-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
shadow-core = { path = "../shadow-core" }
clap = { version = "4.5.60", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = {version = "0.4", features = ["serde"]}

tokio-stream = "0.1.18"
termimad = "0.34.1"
ratatui = { version = "0.30.0"}
ratatui-textarea= "*"
pulldown-cmark = "0.13.1"
tui-markdown = "0.3.7"
crossterm = "0.29.0"
tracing-subscriber = "0.3"
color-eyre = "0.6.5"