[package]
name = "shadow-tui"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "shadow"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1.18"
ratatui = { version = "0.30.0" }
pulldown-cmark = "0.13.1"
crossterm = "0.29.0"
color-eyre = "0.6.5"
json5 = "1.3.0"
serde_json = "1.0"
tracing-subscriber = "0.3"
hotpath = "0.14"
tracing = "0.1.44"
tokio-util = "0.7.18"

shadow-core = { path = "../shadow-core" }
shadow-utils = { path = "../shadow-utils" }
shadow-continuity = { path = "../shadow-continuity" }

[features]
hotpath = ["hotpath/hotpath"]
hotpath-alloc = ["hotpath/hotpath-alloc"]
